crates/jsonschema-cli/tests/snapshots/cli__draft2020_property_names_enforced.snap
---
source: crates/jsonschema-cli/tests/cli.rs
expression: out
---
{FILE_1} - INVALID. Errors:
1. "foo" does not match "^a"
{FILE_2} - VALID
