crates/jsonschema-cli/tests/snapshots/cli__draft4_property_names_ignored.snap
---
source: crates/jsonschema-cli/tests/cli.rs
expression: out
---
{FILE_1} - VALID
{FILE_2} - VALID
