crates/jsonschema-cli/tests/snapshots/cli__format_enforcement_enabled.snap
---
source: crates/jsonschema-cli/tests/cli.rs
expression: out
---
{FILE_1} - INVALID. Errors:
1. "not-an-email" is not a "email"
