crates/jsonschema-cli/tests/snapshots/cli__no_instances.snap
---
source: crates/jsonschema-cli/tests/cli.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
Schema is valid
