crates/jsonschema-cli/tests/snapshots/cli__output_text_multiple_errors.snap
---
source: crates/jsonschema-cli/tests/cli.rs
expression: sanitized
---
{FILE_1} - INVALID. Errors:
1. "email" is a required property
2. 123 is not of type "string"
3. "not a number" is not of type "number"
