crates/jsonschema-cli/tests/snapshots/cli__output_text_single_error.snap
---
source: crates/jsonschema-cli/tests/cli.rs
expression: sanitized
---
{FILE_1} - INVALID. Errors:
1. "not a number" is not of type "number"
