crates/jsonschema-cli/tests/snapshots/cli__relative_resolution-2.snap
---
source: crates/jsonschema-cli/tests/cli.rs
expression: sanitized
---
{FILE_1} - INVALID. Errors:
1. 42 is not of type "string"
