crates/jsonschema-cli/tests/snapshots/cli__vocabulary_undeclared_self_describing.snap
---
source: crates/jsonschema-cli/tests/cli.rs
expression: out
---
{FILE_2} - ERROR: Unknown vocabulary: 'https://example.com/vocab/made-up' is required by the meta-schema. Adjust configuration to declare support for it
