crates/jsonschema-cli/tests/snapshots/cli__vocabulary_undeclared_with_instance.snap
---
source: crates/jsonschema-cli/tests/cli.rs
expression: out
---
Schema is invalid. Error: Unknown vocabulary: 'https://example.com/vocab/made-up' is required by the meta-schema. Adjust configuration to declare support for it
